--- a/module2_solution/css/vos.css
+++ b/module2_solution/css/vos.css
@@ -1,3 +1,174 @@
+/********** Base styles **********/
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  width: 100%;
+  padding-left:10px;
+  padding-right:10px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
 h1 {
-	font-size: 24px;
+  font-size: 1.75em;
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 40px;
+}
+
+h2 {
+  font-size: 1.25em;
+	float: right;
+	width: 130px;
+	padding:10px;
+	margin:0;
+  border-left: 1px solid black;
+	border-bottom: 1px solid black;
+}
+
+p {
+  text-align: justify;
+  /*border: 1px solid black;*/
+  width: 100%;
+  /*height: 200px;*/
+  height: 100%;
+  padding: 10px;
+  clear:right;
+}
+
+#col_1, #col_2, #col_3 {
+	margin: 10px;
+	border: 1px solid black;
+}
+
+#col_1 {
+	background-color: #a52a2a;
+}
+
+#col_2 {
+	background-color: #deb887;
+}
+
+#col_3 {
+	background-color: #5f9ea0;
+}
+
+#col_1 h2 {
+	background-color: #a52aff;
+}
+
+#col_2 h2 {
+	background-color: #deb800;
+}
+
+#col_3 h2 {
+	background-color: #5f9e00;
+}
+
+/* Simple Responsive Framework. */
+.row {
+  width: 100%;
+}
+
+/********** Large devices only **********/
+@media (min-width: 992px) {
+
+  p {
+  height: 225px;
+  }
+
+  .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, 
+  .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
+    float: left;
+    border: 1px solid green;
+  }
+  .col-lg-1 {
+    width: 8.33%;
+  }
+  .col-lg-2 {
+    width: 16.66%;
+  }
+  .col-lg-3 {
+    width: 25%;
+  }
+  .col-lg-4 {
+    width: 33.33%;
+  }
+  .col-lg-5 {
+    width: 41.66%;
+  }
+  .col-lg-6 {
+    width: 50%;
+  }
+  .col-lg-7 {
+    width: 58.33%;
+  }
+  .col-lg-8 {
+    width: 66.66%;
+  }
+  .col-lg-9 {
+    width: 74.99%;
+  }
+  .col-lg-10 {
+    width: 83.33%;
+  }
+  .col-lg-11 {
+    width: 91.66%;
+  }
+  .col-lg-12 {
+    width: 100%;
+  }
+}
+
+/********** Medium devices only **********/
+@media (min-width: 768px) and (max-width: 991px) {
+
+  p {
+  height: 190px;
+  }
+
+  .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, 
+  .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
+    float: left;
+    border: 1px solid green;
+  }
+  .col-md-1 {
+    width: 8.33%;
+  }
+  .col-md-2 {
+    width: 16.66%;
+  }
+  .col-md-3 {
+    width: 25%;
+  }
+  .col-md-4 {
+    width: 33.33%;
+  }
+  .col-md-5 {
+    width: 41.66%;
+  }
+  .col-md-6 {
+    width: 50%;
+  }
+  .col-md-7 {
+    width: 58.33%;
+  }
+  .col-md-8 {
+    width: 66.66%;
+  }
+  .col-md-9 {
+    width: 74.99%;
+  }
+  .col-md-10 {
+    width: 83.33%;
+  }
+  .col-md-11 {
+    width: 91.66%;
+  }
+  .col-md-12 {
+    width: 100%;
+  }
 }
